--- a/shotgun-app/index.html
+++ b/shotgun-app/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/webp" href="/shotgun.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>shotgun-app</title>
+    <meta name="description" content="A high-stakes roulette where shotguns replace revolvers. Double up or lose everything." />
+    <title>Shotgun Roulette</title>
   </head>
   <body>
     <div id="root"></div>
