fixed game description typo

--- a/shotgun-app/index.html
+++ b/shotgun-app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/webp" href="/shotgun.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="A high-stakes roulette where shotguns replace revolvers. Double up or lose everything." />
+    <meta name="description" content="A high-stakes roulette with a shotgun against an eternal being. Double up or lose everything." />
     <title>Shotgun Roulette</title>
   </head>
   <body>
